# dcat-ap-lu

./: CICD.md  Makefile  README.md  SHACLtesting.md  pyproject.toml  requirements.txt  validation_runner.py
.github/workflows/: tests.yml  transform_with_model2owl.yml
glossary/: dcat_ap_lu_CM_glossary.html
glossary/static/css/: glossary.css
implementation/dcat_ap_lu/conventions_report/: dcat_ap_lu_CM_convention_report.html
implementation/dcat_ap_lu/jsonld_context/: dcat_ap_lu_CM_context.jsonld
reports/: data_entities.csv  data_entities.json  data_entities.txt  data_entities_could.csv  data_entities_could.json  data_entities_could.txt  data_entities_must.csv  data_entities_must.json  data_entities_must.txt  data_entities_should.csv  data_entities_should.json  data_entities_should.txt  entity_coverage_report.csv  entity_coverage_report.json  entity_coverage_report_could.csv  entity_coverage_report_could.json  entity_coverage_report_must.csv  entity_coverage_report_must.json  entity_coverage_report_should.csv  entity_coverage_report_should.json  shacl_entities.csv  shacl_entities.json  shacl_entities.txt  shacl_entities_could.csv  shacl_entities_could.json  shacl_entities_could.txt  shacl_entities_must.csv  shacl_entities_must.json  shacl_entities_must.txt  shacl_entities_should.csv  shacl_entities_should.json  shacl_entities_should.txt  uml_entities.csv
scripts/: check_entity_coverage.py  extract_entity_usage.py  extract_uml_entities.py  generate_shacl_tests.py  validation_runner.py
tests/: __init__.py  conftest.py
tests/test_data/: context.jsonld
(+277 files in other folders)
