[project]
name = "dcat-ap-lu"
version = "0.0.1"
description = "DCAT-AP LU SHACL validation project"
authors = [
    { name = "meaningfy.ws", email = "hi@meaningfy.ws" }
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "pyshacl>=0.30.1",
    "pytest>=8.4.1",
    "pytest-bdd>=8.1.0",
    "pytest-html>=4.1.1",
    "rdflib>=7.1.4",
]
